[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "axme-sdk"
version = "0.1.0"
description = "Official Python SDK for Axme APIs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AxmeAI" }]
dependencies = ["httpx>=0.27.0,<1.0.0"]

[project.optional-dependencies]
dev = ["pytest>=9.0.0,<10.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
